<?xml version="1.0" encoding="utf-8"?>
<!--<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fillViewport="true"
    android:orientation="vertical">-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:context=".RegisterActivity"
        android:id="@+id/rlRegister"
        android:orientation="vertical"
        android:background="@color/colorPrimary">

    <!--This is how you can include another layout
     inside a layout file. We might need toolbar again
     and again inside our project, so we just made one separate
     layout file and then use it inside any layout file using the
     include tag-->
            <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar"/>
<!--
         <TextView
                android:id="@+id/user_details"
                android:text="          REGISTRATION          "
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textSize="30dp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="0dp"
                android:padding="13dp"
                android:background="@drawable/text_boundary_background"
                android:textAppearance="?android:attr/textAppearanceLarge"
             />-->

               <!-- android:background="@drawable/text_boundary_background"-->
    <EditText
        android:id="@+id/etType_of_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter your role with specified words \n'Food Donor' (or) 'Food Receiver'"
        android:inputType="text"
        android:layout_marginTop="120dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:padding="20dp"
        android:multiLine="true"
        android:drawableLeft="@drawable/ic_action_food"
        android:drawablePadding="18dp"
        android:background="@drawable/text_boundary_background"
        />

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etType_of_user"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="6dp"
        android:layout_marginRight="12dp"
        android:background="@drawable/text_boundary_background"
        android:drawableLeft="@drawable/ic_action_person"
        android:drawablePadding="3dp"
        android:hint="@string/enter_name"
        android:inputType="textPersonName|text"
        android:padding="15dp"
        android:singleLine="true"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

           <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etName"
                android:background="@drawable/text_boundary_background"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="6dp"
                android:layout_marginRight="12dp"
                android:drawableLeft="@drawable/ic_action_email"
                android:drawablePadding="3dp"
                android:maxLines="1"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="15dp"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textSize="16sp"/>


            <EditText
                android:id="@+id/etPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/text_boundary_background"
                android:layout_below="@+id/etEmail"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="6dp"
                android:layout_marginRight="12dp"
                android:maxLength="10"
                android:drawableLeft="@drawable/ic_action_phone"
                android:drawablePadding="3dp"
                android:maxLines="1"
                android:hint="@string/mobile_number"
                android:inputType="phone"
                android:padding="15dp"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/etAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/text_boundary_background"
                android:layout_below="@+id/etPhoneNumber"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="6dp"
                android:layout_marginRight="12dp"
                android:gravity="top"
                android:drawableLeft="@drawable/ic_action_address"
                android:drawablePadding="3dp"
                android:hint="@string/address"
                android:padding="15dp"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textSize="16sp"/>


            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:background="@drawable/text_boundary_background"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etAddress"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="6dp"
                android:layout_marginRight="12dp"
                android:hint="@string/choose_password"
                android:inputType="numberPassword"
                android:padding="15dp"
                android:maxLength="6"
                android:drawableLeft="@drawable/ic_action_password"
                android:drawablePadding="3dp"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/etConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/text_boundary_background"
                android:layout_below="@+id/etPassword"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="6dp"
                android:layout_marginRight="12dp"
                android:hint="@string/confirm_password"
                android:inputType="numberPassword"
                android:padding="15dp"
                android:singleLine="true"
                android:maxLength="6"
                android:drawableLeft="@drawable/ic_action_password"
                android:drawablePadding="3dp"
                android:textColor="@android:color/black"
                android:textSize="16sp"/>


            <Button
                android:id="@+id/btnRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etConfirmPassword"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="12dp"
                android:background="@drawable/text_boundary_background"
                android:text="@string/registration"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:padding="10dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                />
        </RelativeLayout>
<!--

    </RelativeLayout>
</ScrollView>-->
